# NOTE:
# 1. for display continuity sake please use 2 spaces instead of tabs
# 2. make sure that lines break at 80 chars for constricted display situations
#<-------------------------------- 80 chars ---------------------------------->#

2017-06-10 mmichaud <m.michael.michaud@orange.fr>
  * Shapefile : handling of dbf containing deleted records
  * PLUS/GraphToolBox : adds HydrographicNetworkAnalysis plugin and improves
    Skeletonizer

2017-05-31 Nicolas Ribot <nicolas.ribot@gmail.com>
  * PostgreSQL JDBC driver : set the ApplicationName driver's property to allow 
    OpenJUMP to advertise its name to PostgreSQL backend

2017-05-31 mmichaud <m.michael.michaud@orange.fr>
  * ExtractPointsPlugIn : keep original feature id in attribute
  * SpatialJoinPlugIn : A and B attribute prefix were reversed

2017-05-20 Giuseppe Aruta
  * Task Frame title shows also projection description if it is set
    and matches any value available into srid.txt SRS registry file

2017-05-10 Giuseppe Aruta
  * Added TaskProperty plugin to read and modify project properties

* release 1.11 *****************************************************************

2017-04-05 mmichaud <m.michael.michaud@orange.fr>
  * Improve MakeValidOp robustness

2017-04-01 mmichaud <m.michael.michaud@orange.fr>
  * Fix #458 Improve RasterImageLayerPropertiesPlugIn speed

2017-03-31 mmichaud <m.michael.michaud@orange.fr>
  * Fix a regression in RasterImageLayerPropertiesPlugIn
  * Fix #456 possible NPE in AutoAssignAttributePlugIn

2017-03-26 Giuseppe Aruta 
  * Updated CadTools extension to ver. 0.2

2017-03-26 mmichaud <m.michael.michaud@orange.fr>
  * Add Matching extension to OpenJUMP PLUS distribution

2017-03-20 mmichaud <m.michael.michaud@orange.fr>
  * Fix a robustess problem in MakeValidOp

2017-03-19 ede
  * fix WFS in PLUS not working due too i18n error

2017-03-14 mmichaud <m.michael.michaud@orange.fr>
  * upgrade to jumpjgrapht 0.7.1 (fix a bug related to empty geometries)